--- a/vercel.json
+++ b/vercel.json
@@ -34,7 +34,7 @@
       ]
     }
   ],
-  "routes": [
-    { "src": "^/$", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" }
   ]
 }
