--- a/vercel.json
+++ b/vercel.json
@@ -35,6 +35,8 @@
     }
   ],
   "rewrites": [
-    { "source": "/", "destination": "/index.html" }
+    { "source": "/",    "destination": "/fr/index.html" },
+    { "source": "/fr",  "destination": "/fr/index.html" },
+    { "source": "/fr/", "destination": "/fr/index.html" }
   ]
 }
