--- a/vercel.json
+++ b/vercel.json
@@ -35,8 +35,10 @@
     }
   ],
   "rewrites": [
-    { "source": "/",    "destination": "/fr/index.html" },
-    { "source": "/fr",  "destination": "/fr/index.html" },
-    { "source": "/fr/", "destination": "/fr/index.html" }
+    { "source": "/",             "destination": "/fr/index.html" },
+    { "source": "/index",        "destination": "/fr/index.html" },
+    { "source": "/index.html",   "destination": "/fr/index.html" },
+    { "source": "/fr",           "destination": "/fr/index.html" },
+    { "source": "/fr/",          "destination": "/fr/index.html" }
   ]
 }
