--- a/vercel.json
+++ b/vercel.json
@@ -4,23 +4,22 @@
   ],
   "headers": [
     {
-      "source": "/:all*.html",
+      "source": "/(.*)",
+      "has": [
+        { "type": "header", "key": "Accept", "value": ".*text/html.*" }
+      ],
       "headers": [
-        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" },
-        { "key": "Pragma", "value": "no-cache" },
-        { "key": "Expires", "value": "0" }
+        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
       ]
     },
     {
-      "source": "/",
+      "source": "/sw.js",
       "headers": [
-        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" },
-        { "key": "Pragma", "value": "no-cache" },
-        { "key": "Expires", "value": "0" }
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
       ]
     },
     {
-      "source": "/(.*).(css|js|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
+      "source": "/(.*)\\.(css|js|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
