--- a/vercel.json
+++ b/vercel.json
@@ -5,21 +5,23 @@
   "headers": [
     {
       "source": "/(.*)",
-      "has": [
-        { "type": "header", "key": "Accept", "value": ".*text/html.*" }
-      ],
+      "has": [{ "type": "header", "key": "Accept", "value": ".*text/html.*" }],
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" },
+        { "key": "CDN-Cache-Control", "value": "no-cache, no-store, must-revalidate" },
+        { "key": "Pragma", "value": "no-cache" },
+        { "key": "Expires", "value": "0" }
       ]
     },
     {
       "source": "/sw.js",
       "headers": [
-        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" },
+        { "key": "CDN-Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
       ]
     },
     {
-      "source": "/(.*)\\.(css|js|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
+      "source": "/(.*)\\.(css|js|mjs|map|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
