--- a/vercel.json
+++ b/vercel.json
@@ -7,21 +7,17 @@
       "source": "/(.*)",
       "has": [{ "type": "header", "key": "Accept", "value": ".*text/html.*" }],
       "headers": [
-        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" },
-        { "key": "CDN-Cache-Control", "value": "no-cache, no-store, must-revalidate" },
-        { "key": "Pragma", "value": "no-cache" },
-        { "key": "Expires", "value": "0" }
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
       ]
     },
     {
       "source": "/sw.js",
       "headers": [
-        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" },
-        { "key": "CDN-Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
       ]
     },
     {
-      "source": "/(.*)\\.(css|js|mjs|map|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
+      "source": "/(.*)\\.(css|mjs|js|map|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
