--- a/vercel.json
+++ b/vercel.json
@@ -11,15 +11,15 @@
       ]
     },
     {
-      "source": "/sw.js",
+      "source": "/(.*)\\.(css|mjs|js|map|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
       "headers": [
-        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
       ]
     },
     {
-      "source": "/(.*)\\.(css|mjs|js|map|png|jpg|jpeg|webp|svg|gif|ico|woff|woff2|ttf|eot)",
+      "source": "/sw.js",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, max-age=0" }
       ]
     }
   ]
